the final fix: align the buttons inline, no matter how big the text paragraph is.

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,9 +167,8 @@ nav a:hover {
   
 }
 
-.art-bottom {
-  justify-content: space-between;
-  /* background-color: red; */
+.art-content {
+  flex: 2;
 }
 
 .circle-image{
